# dbctl

./: .gitignore  Cargo.toml  README.md  TODO.md
crates/dbctl-cli/: Cargo.toml
crates/dbctl-cli/src/: lib.rs  main.rs
crates/dbctl-core/: Cargo.toml
crates/dbctl-core/src/: lib.rs
crates/dbctl-core/src/db/: mariadb.rs  mod.rs  postgres.rs  redis.rs  traits.rs
crates/dbctl-core/src/docker/: engine.rs  mod.rs
crates/dbctl-tui/: Cargo.toml
crates/dbctl-tui/src/: lib.rs
src/: main.rs
