[package]
name = "dbctl"
version = "0.1.0"
edition = "2021"
authors = ["Akshay B <akshay2642005@gmail.com>"]
description = "A CLI tool to manage Dockerized databases like PostgreSQL, Redis, and MariaDB"
repository = "https://github.com/Akshay2642005/dbctl.git"
readme = "README.md"
license = "Apache-2.0"
keywords = ["cli", "tui", "docker", "postgres", "redis", "mariadb"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.70"

[[bin]]
name = "dbctl"
path = "src/main.rs"

[dependencies]
dbctl-cli = { path = "crates/dbctl-cli" }
dbctl-core = { path = "crates/dbctl-core" }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
