[package]
name = "dbctl-core"
version = "0.1.0"
edition = "2021"
authors = ["Akshay B <akshay2642005@gmail.com>"]
description = "A CLI tool to manage Dockerized databases like PostgreSQL, Redis, and MariaDB"
repository = "https://github.com/Akshay2642005/dbctl.git"
license = "Apache-2.0"
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.70"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
bollard = "0.18.1"
